--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title                    : "PAGE"
 title_separator          : "-"
 subtitle                 : "PyAI for General Education"
 name                     : "Hung Truong"
-description              : "An amazing website."
+description              : "Welcome to my personal website where I share my passion for programming using mainly Python and the applications in Artificial Intelligence. I share here some tutorials and exercises which help me to learn AI algorithms and I hope that it would help you too. Whether you're a beginner or an experienced coder, I invite you to explore my website and discover the exciting possibilities of AI programming with Python. Let's learn and grow together!"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "Hung Truong"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "As someone with a PhD in Applied Mathematics, I find myself constantly captivated by mathematical algorithms and numerical methods. My passion for these subjects has become so all-consuming that I often view the world not only as it appears, but also through the lens of mathematical models. In fact, I'm convinced that the possibility of this world being a simulation is quite high."
   location         : "Strasbourg"
   email            :
   links:
@@ -120,9 +120,9 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+    - label: "Researchgate"
+      icon: "fab fa-fw fa-researchgate-square"
+      url: "https://www.researchgate.net/profile/Hung-Truong-11?ev=hdr_xprf"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Truong-Hung"
