--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
+  #- title: "About"
+  # url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Research"
+    url: https://truong-hung.github.io/hungtruong_PyAI/Research
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
