--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "Hung Truong"
   avatar           : "/assets/images/Prely.png"
-  bio              : "As someone with a PhD in Applied Mathematics, I find myself constantly captivated by mathematical algorithms and numerical methods. My passion for these subjects has become so all-consuming that I often view the world not only as it appears, but also through the lens of mathematical models. In fact, I'm convinced that the possibility of this world being a simulation is quite high."
+  bio              : "As someone with a PhD in Applied Mathematics, I find myself constantly captivated by mathematical algorithms and numerical methods. My passion for these subjects has become so all-consuming that I often view the world not only as it appears, but also through the lens of mathematical models. I am even open to the possibility that the world we live in might be nothing more than a simulation, given my profound interest in the subject matter."
   location         : "Strasbourg"
   email            :
   links:
