--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
+  - title: "PyAI"
+    url: /pythonprojects/
+  - title: "Tutorials"
+    url: /pythontutorials/
   - title: "Research"
     url: /research/
   # - title: "Sample Collections"
