--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "PyAI"
-    url: /pythonprojects/
+  - title: "PAGE"
+    url: /page/
   - title: "Tutorials"
     url: /pythontutorials/
   - title: "Research"
