--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Hung Truong"
+title                    : "Hung-Truong"
 title_separator          : "-"
 subtitle                 : ""
 name                     : "Hung Truong"
